syntax = "proto3";

package auth;

service AuthService {
  rpc Authenticate (Authenticate) returns (AuthenticateResult);
}

message Authenticate {
  string token = 1;
}

message AuthenticateResult {
  string type = 1;
  int32 userId = 2;
  string tenantId = 3;
  string tokenId = 4;
  string email = 5;
}
